# Ai-driven-motion-predictor

./: .env.example  .env.kaare.example  .gitignore  404.html  README.md  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_gpu_job.slurm  yfinanceLoader.py
.github/workflows/: ci.yml  codeql.yml
docs/: index.md
plots/: baseline_metrics.csv  baseline_vs_actual.html
reference/src/: index.html
reference/src/Kaare/: index.html
reference/src/Kaare/client/: index.html
reference/src/Kaare/config/: index.html
reference/src/Kaare/db/: index.html
reference/src/Kaare/debug_hf/: index.html
reference/src/Kaare/models/: index.html
reference/src/Kaare/pipeline/: index.html
reference/src/Kaare/providers/: index.html
reference/src/Kaare/seed/: index.html
reference/src/Kaare/sentiment/: index.html
reference/src/Kaare/smoke_test/: index.html
reference/src/Kaare/smoke_test_sentiment/: index.html
reference/src/kaare_example/: index.html
reference/src/run_baseline/: index.html
reference/src/stock_predictor/: index.html
reference/src/yfinanceLoader/: index.html
search/: search_index.json
src/: kaare_example.py  run_baseline.py  stock_predictor.py  tasks.ipynb  tasks_executed.ipynb  yfinanceLoader.py
src/Kaare/: CLAUDE.md  FinbertPlan.md  __init__.py  client.py  config.py  debug_hf.py  docker-compose.yaml  models.py  pipeline.py  seed.py  sentiment.py  smoke_test.py  smoke_test_sentiment.py
src/Kaare/db/: __init__.py  connection.py  migrations.py  repository.py
src/Kaare/providers/: __init__.py  alphavantage.py  base.py  finnhub_provider.py  hf_provider.py  yfinance_provider.py
src/Practice/: YFinanceModelCreation.ipynb
src/api/: .env.example  README.md  main.py  pyproject.toml
src/api/agents/: graph.py  tools.py
src/api/prompts/: main_agent.md  sentiment_analyst_sub_agent.md  stock_analyst_sub_agent.md  sub_agent.md
src/api/tests/: test_main.py
src/app/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src/app/src/: App.tsx  index.css
src/app/src/components/: ChatPanel.tsx  HeaderBar.tsx  PredictionsPanel.tsx  SentimentGauge.tsx  StockChartPanel.tsx  chat.tsx  theme-provider.tsx  tool-call.tsx
src/app/src/hooks/: use-chat.ts
src/data/: yfinanceLoader.py
src/models/: arima_model.py  baseline_model.py  data.py  model_eval.py  model_tools.py  prophet_model.py
src/postgres/: docker-compose.yml
tests/: test_example.py  test_news_sentiment.py
(+26 files in other folders)
